// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MovieMenu Should MovieMenu isMain render correctly 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    The Grand Budapest Hotel
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Comedy
    </span>
    <span
      className="movie-card__year"
    >
      2014
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <PlayButton
      id={1}
    />
    <AddMyListButton
      isFavorite={true}
      onButtonClick={[Function]}
    />
  </div>
</div>
`;

exports[`Render MovieMenu Should MovieMenu render correctly 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    The Grand Budapest Hotel
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Comedy
    </span>
    <span
      className="movie-card__year"
    >
      2014
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <PlayButton
      id={1}
    />
    <AddMyListButton
      isFavorite={true}
      onButtonClick={[Function]}
    />
    <Link
      className="btn movie-card__button"
      to="/films/1/review"
    >
      Add review
    </Link>
  </div>
</div>
`;
